finished PUT and DELETE of /spells/

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dndparty
 spring.datasource.username=dndadmin
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.default_schema=public
 
 server.error.include-message=always
